Release 25w06a (snapshot)